<resources>
    <string name="app_name">Weather App</string>
    <string name="my_account">My Account</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="settings">Settings</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="select_the_temperature_scale">Select the Temperature Scale</string>
    <string name="current_location">Current Location</string>
    <string name="check_temperature">Check Temperature</string>
    <string-array name="temp_scale">
        <item> C </item>
        <item> F </item>

    </string-array>
</resources>
